Fixed bug #60167 (Crash / memory corruption in ext/com_dotnet) (Timm Friebe).